[gd_scene load_steps=8 format=3 uid="uid://b1bjgpxmfx8kp"]

[ext_resource type="Script" path="res://characters/Player.gd" id="1_8u6if"]
[ext_resource type="PackedScene" uid="uid://pbmyh1qru7p" path="res://characters/happy_boo/happy_boo.tscn" id="1_gvfjh"]
[ext_resource type="PackedScene" uid="uid://f20vlvuocltm" path="res://weapons/guns/Gun.tscn" id="3_ar2mg"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7c34n"]
bg_color = Color(0.152941, 0.168627, 0.188235, 1)
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lgi7r"]
bg_color = Color(0.623529, 0.866667, 0.317647, 1)
corner_radius_top_left = 7
corner_radius_top_right = 7
corner_radius_bottom_right = 7
corner_radius_bottom_left = 7

[sub_resource type="CircleShape2D" id="CircleShape2D_jdgry"]
radius = 46.0977

[sub_resource type="CircleShape2D" id="CircleShape2D_dd6of"]
radius = 37.054

[node name="Player" type="CharacterBody2D"]
collision_mask = 5
motion_mode = 1
wall_min_slide_angle = 0.0
platform_floor_layers = 4294967040
script = ExtResource("1_8u6if")

[node name="UI" type="CanvasLayer" parent="."]
layer = 15

[node name="TimerLabel" type="Label" parent="UI"]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -69.0
offset_top = 20.0
offset_right = 69.0
offset_bottom = 62.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
horizontal_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="UI"]
unique_name_in_owner = true
z_index = 128
offset_left = 20.0
offset_top = 20.0
offset_right = 326.0
offset_bottom = 61.0
size_flags_stretch_ratio = 0.0
theme_override_styles/background = SubResource("StyleBoxFlat_7c34n")
theme_override_styles/fill = SubResource("StyleBoxFlat_lgi7r")
step = 1.0
value = 50.0
rounded = true
show_percentage = false

[node name="HealthLabel" type="Label" parent="UI/HealthBar"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="HappyBoo" parent="." instance=ExtResource("1_gvfjh")]
unique_name_in_owner = true

[node name="HurtBox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
shape = SubResource("CircleShape2D_jdgry")
debug_color = Color(0.992157, 0, 0.262745, 0.282353)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_dd6of")
debug_color = Color(0, 0.6, 0.701961, 0.419608)

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Gun" parent="." instance=ExtResource("3_ar2mg")]
position = Vector2(0, -34)
